-index.htmlをレスポンシブ対応にしました。
-【さつき記法】
--リストやタイトル記法で文字の手前スペースを除去するようにしました。
--relやtargetやdataなどの設定を止めました。
--日時付き見出し記法（*t*記法）を削除しました。((この処理のためにだけに、入力テキストを前処理していました。))
--見出し記法をトップレベル要素ブロック以外では使用できなくしました。
--実装を色々と見直しました。
-【Fix】PostgreSQL/MySQL運用時、外部画像取り込みが動作しない。
-【Fix】画像取り込み時のエラーメッセージがちゃんと表示されない。
-【Fix】システムチェック画面でCryptXの確認が正しくなかった。
-【Fix】index.html内のscriptが動いてなかった。
-【Security/DoS】第3者レンタル時、目次記法を使い、見出しに「{<toc></toc>}」と書くことで無限ループさせることができる。
-他

*Ver3.24 : 2019/05/31

-RSSからのリンクhash（#rss-tm）を除去する際、リロードしないようにしました。
-[https://bookmark.hatenastaff.com/entry/2019/05/28/141208:はてなブックマークの常時SSL化]に伴い、はてなブックマークへのリンクを https に変更。
-RFC7231に準拠し、リダイレクトを相対パスで出力するよう変更。
-アルバムにアップロード時の拡張子制約を緩和し、半角英数以外を含むものを許可しました。（[https://adiary.adiary.jp/0409#c1:Thanks to harata]）
-【conf】{<$v.album_allow_ver_ext>}の設定を削除
-【アルバム】ファイル名に使えない文字の制限を緩和しました。
-【Fix】トップページの2ページ目で「前のページ」のリンクが正しくない。（[https://adiary.adiary.jp/0409#com:Thanks to sabazo]）
-【Fix】mixiの画像サーバ等、一部のサイトにSSL接続できない。((Net::SSLeayモジュールで、[w:Server_Name_Indication:SNI]が有効になっていないため。))
-【Fix】body が 0byte の結果を応答するとき、「Content-Length: 0」を送れていなかった。
-【Fix/httpd】mime.types をロードする際、コメントも処理していた。
-【Fix/httpd】"file?query" 形式のとき、ファイルをロードできない。
-【Fix/httpd】拡張子判定時、大文字小文字を区別してしまう。
-【Fix/アルバム】ゴミ箱関連のファイル名の挙動がおかしい。
-【Fix/アルバム】ファイル名に特殊文字を含む場合の挙動がおかしい時がある。
-【Fix/Markdown】「|:---|:---|」のようなテーブルを認識できない。
-【Fix/Markdown】通常文字列に「|---|---|」などが続いた場合、テーブルと判定してしまう。

*Ver3.23 : 2019/03/12

-Pocketのシェア数が取得できなくなっていたので取得機能を削除しました。((query.yahooapis.com が突然サービス終了したため))
-デフォルトアイコンとデフォルトロゴを変更しました。
-静的HTML出力が無効のとき、管理者以外にはエラーメッセージを表示しないように変更。
-管理メニューの流れを少し改善しました。
-記事編集画面でファイルアップロードの進捗を表示するよう変更。
-アルバムと記事編集画面のファイル選択ボタンのデザインを変更。
-【アルバム】アップロード中の進捗を表示するように変更。
-【アルバム】ファイルリネーム時に、画像以外はサムネイルを再生成するよう変更。
-【アルバム】ファイルリネーム時に del キーが使用できない。
-【httpd/EXE】Socket を STDIN に接続するのを止め、若干高速化しました。
-【httpd/EXE】index.htmlを有効化しました。
-【httpd/EXE】大きいファイルをダウンロードする場合、すべてメモリに展開しないようにしました。
-【adiary.conf.cgi.sample】大きいファイルはテンポラリに書き出すよう変更。