@@ -14,6 +14,7 @@
 -【Fix】画像取り込み時のエラーメッセージがちゃんと表示されない。
 -【Fix】システムチェック画面でCryptXの確認が正しくなかった。
 -【Fix】index.html内のscriptが動いてなかった。
+-【Fix】js や css の強制再読込に失敗する。（[https://github.com/nabe-abk/adiary/issues/6:Thanks to 1484]))
 -【Security/DoS】第3者レンタル時、目次記法を使い、見出しに「{<toc></toc>}」と書くことで無限ループさせることができる。
 -他
 
